--- a/Otsu's Method/CV_project1.ipynb
+++ b/Otsu's Method/CV_project1.ipynb
@@ -6,8 +6,7 @@
       "name": "CV_project1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sjangnure/CS6643-Computer-Vision/blob/main/Otsu's%20Method/CV_project1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
